--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
+  
   <title>Главная страница</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -29,12 +30,14 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, iure. Laborum id quia dolore similique, excepturi eligendi minima sint. Libero, est autem incidunt rem ipsa impedit deleniti necessitatibus facilis recusandae.</p>
       </div>
 
-      <div class="contact_us">
+      <div class="background">
+        <div class="contact_us">
           <div class="content">
             <h3>Lorem ipsum dolor sit amet.</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid, mollitia possimus cumque, rem sunt commodi eligendi similique nulla impedit asperiores saepe beatae explicabo nihil dolorum debitis dicta ea? Libero, maiores?</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore magni fugit aliquam! Optio, ipsa. Recusandae vel dolores modi.</p>
           </div>
-        <a class="link_contact" href="#">Свяжитесь с нами</a>
+            <a class="link_contact" href="#">Напишите&nbsp;нам</a>
+        </div>
         <hr>
         <div class="contact_us_info">
           <ul>
