--- a/index.html
+++ b/index.html
@@ -3,58 +3,57 @@
   <meta charset="UTF-8">
   
   <title>Главная страница</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./src/styles/styles.css">
 </head>
 <body>
-  <header class="menu">
-    <a href="contacts.html">Контакты</a>
-    <a href="catalog.html">Каталог</a>
+  <header class="header-menu">
+     <a href="./src/pages/contacts.html"> <img class="header-menu_icons" src="./src/img/contact.png" alt="Обратная связь"></a>
+     <a href="./src/pages/catalog.html"> <img class="header-menu_icons" src="./src/img/catalog.png" alt="Перейти в каталог"></a>
   </header>
   <main>
-      <div class="top_content">
+      <div class="general-information">
         <h1>Интернет-магазин</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi recusandae porro ex dignissimos. A error assumenda ipsum. Quam eveniet aut, tempora fugit illo eos alias magnam quibusdam ipsa, doloribus veritatis.</p>
       </div>
 
-      <div class="about_our_pos">
+      <div class="about-products">
         <h3>О наших товарах</h3>
       </div>
 
-      <div class="discription_1">
+      <div class="our-advantages">
         <h4>Постоянно расширяющийся ассортимент</h4>
         <p class="paragraph">Мы постоянно следим за выпуском новейших продуктов от ведущих производителей смартфонов. Мимо нас не пройдет ни одна новинка!</p>
       </div>
 
-      <div class="about_us">
+      <div class="about-us">
         <h4>О нас</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, iure. Laborum id quia dolore similique, excepturi eligendi minima sint. Libero, est autem incidunt rem ipsa impedit deleniti necessitatibus facilis recusandae.</p>
       </div>
 
-      <div class="background">
-        <div class="contact_us">
-          <div class="content">
-            <h3>Lorem ipsum dolor sit amet.</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore magni fugit aliquam! Optio, ipsa. Recusandae vel dolores modi.</p>
-          </div>
-            <a class="link_contact" href="#">Напишите&nbsp;нам</a>
+      <div class="contact-us">
+        <div class="contact-us_content">
+          <h3>Lorem ipsum dolor sit amet.</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore magni fugit aliquam! Optio, ipsa. Recusandae vel dolores modi.</p>
         </div>
-        <hr>
-        <div class="contact_us_info">
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
-        </div>
+          <a class="link_contact" href="#">Напишите&nbsp;нам</a>
       </div>
+        <hr>
+      <div class="contact-details">
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+        </div>
+      
 
   <!-- <hr> ***Вставить в самом низу***
   <h2>Свяжитесь с нами</h2>
   <p class="paragraph">+7 (960) 555-05-05</p>
   <p class="paragraph">gamestore@mail.com</p>
-  <p class="paragraph">Все права защищены &copy; 2022</p> -->
+   -->
   </main>
 
-  <footer></footer>
+  <footer><p class="paragraph">Все права защищены &copy; 2022 <a href="https://gb.ru" target="_blank"> GeekBrains</a></p></footer>
 </body>
 </html>
