--- a/src/pages/contacts.html
+++ b/src/pages/contacts.html
@@ -28,7 +28,7 @@
   </ul>
   <h4 class="contact_us_info">Напишите нам!</h4>
   <form action="#">
-  Ваше имя <input class="input_" type="text" placeholder="Имя"> <br>
+  <label>Ваше имя </label><input class="input_" type="text" placeholder="Имя"> <br>
   Ваша почта <input class="input_" type="text" placeholder="gamestore@mail.com"> <br>
   Сообщение <textarea class="input_"></textarea><br>
   <input class="submit_" type="submit"> <br> <br>
